--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "PocongUserbot",
-  "description": "[PocongUserbot] userbot Telegram modular yang berjalan pada Python 3.9+",
-  "logo": "https://telegra.ph/file/4dad946885113195be82a.jpg",
-  "keywords": ["telegram", "userbot", "poconguserbot", "modular", "python"],
+  "name": "CilikUserbot",
+  "description": "[CilikUserbot] userbot Telegram modular yang berjalan pada Python 3.9+",
+  "logo": "https://telegra.ph/file/ac134f6d295ad0c03af9b.jpg",
+  "keywords": ["telegram", "userbot", "cilikuserbot", "modular", "python"],
   "repository": "https://github.com/poocong/PocongUserbot",
   "stack": "container",
   "env": {
