--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "name": "CilikUserbot",
-  "description": "[CilikUserbot] userbot Telegram modular yang berjalan pada Python 3.9+",
+  "name": "Cilik-Userbot",
+  "description": "[Cilik-Userbot] userbot Telegram modular yang berjalan pada Python 3.9+",
   "logo": "https://telegra.ph/file/ac134f6d295ad0c03af9b.jpg",
   "keywords": ["telegram", "userbot", "cilikuserbot", "modular", "python"],
-  "repository": "https://github.com/poocong/PocongUserbot",
+  "repository": "https://github.com/grey423/CilikUserbot",
   "stack": "container",
   "env": {
     "API_KEY": {
@@ -23,7 +23,7 @@
       "required": false
     },
      "STRING_SESSION": {
-      "description": "Dapatkan String Session di Grup » https://t.me/PocongUserbot » Lalu ketik #string",
+      "description": "Dapatkan String Session di Grup » https://t.me/CilikSupport » Lalu ketik #string",
       "required": true
     },
     "HEROKU_APP_NAME": {
