--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,9 +20,9 @@ jobs:
           # commit changes
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: 'PocongUserbot: auto fixes'
+          commit_message: 'CilikUserbot: auto fixes'
           commit_options: '--no-verify --signoff'
           repository: .
-          commit_user_name: poocong
-          commit_user_email: akuuntumball01@gmail.com
-          commit_author: poocong <akuuntumball01@gmail.com>
+          commit_user_name: grey423
+          commit_user_email: geryandgrey@gmail.com
+          commit_author: grey423 <geryandgrey@gmail.com>
