--- a/requirements.txt
+++ b/requirements.txt
@@ -47,8 +47,7 @@ pendulum
 pillow
 psutil
 psycopg2-binary
-pytgcalls==3.0.0.dev21
-tgcalls==3.0.0.dev5
+py-tgcalls==0.9.0b1
 pyaztro
 pybase64
 pyfiglet
